// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`namespace.php - php-verify: namespace.php 1`] = `
<?php
namespace Base\\Test\\To\\Extend;

use Other\\Test\\Import;
use One\\More\\Test;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
namespace Base\\Test\\To\\Extend;

use Other\\Test\\Import;
use One\\More\\Test;

`;

exports[`nested.php - php-verify: nested.php 1`] = `
<?php

namespace foo {
    function bar($a, $b) {
        return $a + $b;
    }
    echo bar(2, 3);
}

namespace Name\\Space {
    const FOO = 42;
    function f() { echo __FUNCTION__."\\n"; }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

namespace foo {
    function bar($a, $b)
    {
        return $a + $b;
    }
    echo bar(2, 3);
}

namespace Name\\Space {
    const FOO = 42;
    function f()
    {
        echo __FUNCTION__ . "\\n";
    }
}

`;

exports[`single.php - php-verify: single.php 1`] = `
<?php
namespace Foo;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
namespace Foo;

`;

exports[`without-name.php - php-verify: without-name.php 1`] = `
<?php
namespace {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
namespace {
}

`;
